--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
   --button-color:rgb(89, 117, 127);
   --background-color: #f0f5f5;
   --background-image: linear-gradient(304deg, rgba(240, 245, 245, 1) 0%, rgba(131, 190, 199, 1) 100%);
+  --border-color: rgb(38, 62, 70);
   }
 [data-theme="Dark"] {
       
@@ -17,8 +18,9 @@
   --subheading-color:white;
   --text-color: black;
   --button-color:rgb(249, 249, 249);
-  --background-color: #000000;
-  --background-image: linear-gradient(147deg, #000000 0%, #434343 74%);
+  --background-color: #121212;
+  --background-image: none;
+  --border-color: rgb(73, 73, 73);
 }
 
 body,html {
