--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -25,14 +25,13 @@
 
 .navbar-title {
   font-size: 1.2rem;
-  font-weight: 200;
-  color: #fff;
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+  font-weight: 400;
+  color: var(--heading-color);
 }
 
 .navbar-right {
   display:flex;
   font-size: 1rem;
-  color: #fff;
+  color: var(--heading-color);
   align-items: center;
 }
