--- a/src/styles/pokemonCard.css
+++ b/src/styles/pokemonCard.css
@@ -4,7 +4,7 @@
     width:23rem;
     padding: 0px 15px;
     background-color: tranparent;
-    border:0.5px solid var(--heading-color);
+    border:0.5px solid var(--border-color);
     border-radius:8px;
     justify-content: space-between;
     color:beige
