--- a/src/styles/pokemonIndividualStatsCard.css
+++ b/src/styles/pokemonIndividualStatsCard.css
@@ -8,7 +8,7 @@
   width: 22.5rem;
   height:17rem;
   margin: 1rem 0.1rem;
-  border:0.1px solid var(--heading-color);
+  border:0.1px solid var(--border-color);
 }
 
 .individual-stats-card h2 {
@@ -34,7 +34,7 @@
 .arrow {
   background-color: var(--button-color);
   border: none;
-  color: #fff;
+  color: var(--border-color);
   font-size: 1rem;
   padding: 0.5rem 1rem;
   cursor: pointer;
