--- a/src/styles/typeAnalysisCard.css
+++ b/src/styles/typeAnalysisCard.css
@@ -5,7 +5,7 @@
   color: var(--heading-color);
   padding: 1rem;
   border-radius: 5px;
-  border: 0.1px solid var(--heading-color); 
+  border: 0.1px solid var(--border-color); 
   height:15rem;
   width:37.5rem;
   margin: 0 -15rem;
@@ -51,6 +51,7 @@
         width:90%;
         height: auto;
         margin: 1rem 0;
+        margin-top: 0rem;
     }
     .type-analysis-container {
         flex-direction: column;
