--- a/src/styles/pokemonIndividualStatsCard.css
+++ b/src/styles/pokemonIndividualStatsCard.css
@@ -69,7 +69,7 @@
 .progress-bar {
   flex: 1;
   height: 5px;
-  background-color: var(--subheading-color);
+  background-color: var(--progressbar-color);
   border-radius: 1rem;
   overflow: hidden;
   margin-left: 1rem;
@@ -77,7 +77,7 @@
 
 .progress {
   height: 100%;
-  background-color: var(--background-color);
+  background-color: var(--progress-color);
   transition: width 0.3s ease;
 }
 
